finalizando pagina inicial

--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -111,10 +111,10 @@
               Na Zilhos, acreditamos que o talento precisa estar no lugar certo
               para brilhar. Somos uma ponte estratégica que conecta atletas de
               futebol, empresários e clubes, criando oportunidades reais para
-              que carreiras sejam construídas com solidez e transparência. 
+              que carreiras sejam construídas com solidez e transparência.
               Nosso trabalho vai além da simples intermediação: entendemos as
               necessidades de cada parte envolvida, buscamos parcerias justas e
-              fortalecemos relações que geram resultados.  Com dedicação,
+              fortalecemos relações que geram resultados. Com dedicação,
               profissionalismo e paixão pelo futebol, transformamos potenciais
               em histórias de sucesso, ajudando cada atleta a chegar mais longe.
             </p>
@@ -126,14 +126,7 @@
       
       <div class="card-preços">
         <div
-          class="card-quemSomos"
-          style="
-            width: 1114px;
-            height: 643px;
-            background: #9fd997;
-            color: #0b5c00;
-          "
-        >
+          class="card-quemSomos">
           <p class="plano-gratuito">Plano gratuito – R$ 0,00</p>
   
           <div class="card-body">
@@ -146,24 +139,17 @@
             </p>
           </div>
   
-          <a href="#" class="btn">Clique Aqui</a>
+          <a href="#" class="btn-planos">Clique Aqui</a>
           <div class="outros-planos"></div>
         </div>
       </div>
 
 <div class="card-preços-abaixo">
 
-    <div class="card-preços-intermediarios">
+    <div class="card-preços-intermediarios-primeiro">
         <div
-        class="card-quemSomos"
-          style="
-            width: 1114px;
-            height: 643px;
-            background: #9fd997;
-            color: #0b5c00;
-            "
-        >
-        <p class="plano-gratuito">Plano gratuito – R$ 0,00</p>
+        class="card-planoGratuito">
+        <p class="plano-gratuito">Plano Intermediário <br>R$ 29,90/mês</p>
   
         <div class="card-body">
             <p class="card-text-planos">
@@ -179,17 +165,10 @@
           <div class="outros-planos"></div>
         </div>
     </div>
-    <div class="card-preços-intermediarios">
+    <div class="card-preços-intermediarios-segundo">
         <div
-        class="card-quemSomos"
-          style="
-            width: 1114px;
-            height: 643px;
-            background: #9fd997;
-            color: #0b5c00;
-            "
-        >
-        <p class="plano-gratuito">Plano gratuito 2 – R$ 0,00</p>
+        class="card-quemSomos-abaixo">
+        <p class="plano-gratuito">Plano Premium <br>89,90/mês</p>
   
         <div class="card-body">
             <p class="card-text-planos">
@@ -205,17 +184,10 @@
           <div class="outros-planos"></div>
         </div>
     </div>
-    <div class="card-preços-intermediarios">
+    <div class="card-preços-intermediarios-terceiro">
         <div
-        class="card-quemSomos"
-          style="
-            width: 1114px;
-            height: 643px;
-            background: #9fd997;
-            color: #0b5c00;
-            "
-        >
-        <p class="plano-gratuito">Plano gratuito 3 – R$ 0,00</p>
+        class="card-quemSomos">
+        <p class="plano-gratuito">Plano Elite Anual <br>R$ 899,00/ano </p>
   
         <div class="card-body">
             <p class="card-text-planos">
@@ -233,6 +205,28 @@
     </div>
 </div>
     </section>
+    <footer>
+      <div class="footer">
+        <p>Siga a Zilhos:
+          <div class="links-redesSocias">
+
+            <a href="#"><img src="img/Instagram.png" alt="imagem-instagram "></a>
+            <a href="#"><img src="img/tiktok.png" alt="imagem-tiktok"></a>
+            <a href="#"><img src="img/twiter.png" alt="imagem-twiter"></a>
+            <a href="#"><img src="img/youtube.png" alt="imagem-twiter"></a></p>
+          </div>
+      </div>
+      <div class="links-paginas">
+        <a href="#">Jogador</a>
+        <a href="#">Quem somos ?</a>
+        <a href="#">Ajuda</a>
+        <a href="#">Empresário</a>
+        <a href="#">Cadastre-se</a>
+        <a href="#">Página Inical</a>
+        <a href="#">Clube </a>
+        <a href="#">Entrar </a>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
