atualização pagina inicial

--- a/paginaInicial.html
+++ b/paginaInicial.html
@@ -210,7 +210,7 @@
         <p>Siga a Zilhos:
           <div class="links-redesSocias">
 
-            <a href="#"><img src="img/Instagram.png" alt="imagem-instagram "></a>
+            <a href="#"><img src="img/instagram.png" alt="imagem-instagram "></a>
             <a href="#"><img src="img/tiktok.png" alt="imagem-tiktok"></a>
             <a href="#"><img src="img/twiter.png" alt="imagem-twiter"></a>
             <a href="#"><img src="img/youtube.png" alt="imagem-twiter"></a></p>
